style.css
*{
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
}

@font-face{
    font-family: quantum;
    src: url(Fonts/quantum-webfont.woff2) format('woff2'),
    url(Fonts/quantum-webfont.woff2) format('woff');
}
/* responsive layout */

@media screen and (max-width: 800px) {
    .column {
      flex: 50%;
      max-width: 50%;
    }
    .productcard{
        flex: 50%;
        max-width: 50%;
    }
}
@media screen and (max-width: 600px) {
    .column {
      flex: 100%;
      max-width: 100%;
    }
    .productcard{
        flex: 100%;
        max-width: 100%;
    }
}
  

/* activates burger bar when screen width is at 768 pixels */
@media screen and (max-width: 768px) {

	nav .nav-links {
		display: flex;
        justify-content: space-evenly;
		position: fixed;
        overflow: hidden;
		z-index: 9;
		left: 0;
		right: 0;
		top: 100px;
        box-sizing: border-box;
		bottom: 100%;
        flex-direction: column;
		width: auto;
		height: auto;
        transition: all .75s ease-in-out;
		background-color: rgba(0,0,0,.8);
	}

	nav .nav-links a {
        text-align: center;
        width: 40%;
        margin-left: 30%;
		font-size: 18px;
	}

    a.active {
        background-color: rgb(218, 185, 102);
        color: black;
        height: 200%;
        margin-left: 30%;
        border-radius: 6px;
    }

    nav a:hover, a:active{
        text-align: center;
        height: 200%;
        z-index: 0;
        background: #4d4b4b;
        width: 40%;
        padding-top: 0%;
        border-radius: 6px;
        transition: 0.2;
    }

	nav :checked ~ .nav-links {
		bottom: 0;
	}

	nav .icon-burger {
		display: block;
	}

    /* animation of burger box when clicked */

    nav :checked ~ .icon-burger .line:nth-child(2) {
		opacity: 0;
	}

	nav :checked ~ .icon-burger .line:nth-child(1) {
		transform: translateY(10px) rotate(220deg);
	}

	nav :checked ~ .icon-burger .line:nth-child(3) {
		transform: translateY(-10px) rotate(-220deg);
	}
}

/* reduces the size of the nav link text when the screen size is 1000px - stops the spans from pushing above and below the link */
@media screen and (max-width: 1000px) {

	nav .nav-links a {
		font-size: 17px;
	}
}

/* reduces the size of the nav link text when the screen size is 930px - stops the spans from pushing above and below the link */
@media screen and (max-width: 930px) {

	nav .nav-links a {
		font-size: 13px;
	}
}
/* header + content */
header{
    background-color: black;
    display: flexbox;
    position: fixed;
    width: 100%;
    z-index: 9999;
}

.header {
    padding: 30px;
    text-align: center;
    background: rgb(0, 0, 0);
    justify-content: center;
    position:relative;
}

.logo{
    font-family: quantum;
    padding:1%;
    width: 60%;
    color: #ffffff;
    text-transform: uppercase;
    display: flex;
    align-items: center;
    letter-spacing: 5px;
    line-height: 30px;
    width: 300;
    font-weight: bold;
    height:100;
    text-align: center;
}

.title{
    justify-content: center;
    align-items: center;
}

/* headings, body and paragraphs */

h1{
    text-align: center;
    font-size: 45px;
}

h1, h2, h3, p{
    color: white;
    font-family: quantum;
}

p {
    font-size: 15px;
    justify-content: center;
    margin: 20px;
}

body{
    display: block;
    overflow: scroll;
    position: relative;
    width: 100%;
    height: 20px;
    align-items: center;
    min-height: 8vh;
    background-color: #000000;
}

.column100 {
    font-family: quantum;
    padding-top: 2%;
}

.column100 p{
    font-family: quantum;
    font-size: 20;
    /* font-weight: 900; */
}
.row {
    display: flex;
    flex-wrap: wrap;
    padding: 0 4px;
}
.column {
    flex: 25%;
    max-width: 25%;
    padding: 0 4px;
  }

.column img {
    margin-top: 8px;
    vertical-align: middle;
    width: 100%;
    align-self: center;
  }
/* cards, info on cards + internal cointainers */
.card {
    background-color: #1A1A1A;
    padding: 20px;
    margin-top: 10px;
    color: white;
}

.cardHome{
    background-color: #1A1A1A;
    vertical-align: baseline;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    color: white;
    width: 100%;
    height: auto;
}

.internalContainerL{
    padding:5%;
    flex-direction: column;
    flex:1;
    height: auto;
    display: flex;
    flex-wrap: wrap;
}

.internalContainerR{
    padding:5%;
    flex-direction: column;
    flex:1;
    width:fit-content;
    height: auto;
    display: flex;
    flex-wrap: wrap;
}

.ownerAbout{
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.ExhibitionsAbout{
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.productcard {
    max-width: 300px;
    margin: auto;
    text-align: center;
    font-size: 12px;
    background-color: #1A1A1A;
    border-radius: 3%;
}

.price {
    color: rgb(255, 255, 255);
    font-size: 22px;
}

.productcard button {
    background-color: #e5c163; 
    border: none;
    color: rgb(88, 86, 86);
    padding: 10px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    margin: 4px 2px;
    cursor: pointer;
    width: 50%;
}

.productcard button:hover {
    opacity: 0.7;
}

/* map on visitus */

#map {
    height: 70%;
    position: fixed;
    justify-content: space-around;
    width: 100%;
    overflow: scroll;
}
/* navigation */
nav{
    min-height: 3vh;
    background-color: #000000; 
}

nav a:hover, a:active{
    text-align: center;
    height: 50%;
    z-index: 0;
    background: #4d4b4b;
    width: 100%;
    border-radius: 6px;
    padding-top: 0%;
    transition: 0.2;
}

#nav-toggle{
    position: absolute;
    top: -100px
}

.nav-links{
    font-family: quantum;
    width: 100%;
    display: flex;
    right: 0;
    color: #ffffff;
    background-color: rgb(0, 0, 0);
    height: 50;
   
    justify-content:center;
}

.nav-links a{
    color: #ffffff;
    display: inline-block;
    text-decoration: none;
    letter-spacing: 2px;
    text-transform: uppercase;
    font-weight: bold;
    font-size: 20;
    text-align: center;
}

.nav-links li{
    margin-left: 5%;
    margin-right: 5%;
    list-style-type: none;
}

span{
    color: #e5c163;
    font-weight: Bolder;
    font-size: 20;
}

/*burger bar for further responsivity*/
nav .icon-burger {
    position: absolute;
	display: none;
	right: 5%;
    transform: translateY(-55%);
	top: 55%;
	
}

nav .icon-burger .line {
	width: 30px;
	height: 5px;
	background-color: goldenrod;
	margin: 5px;
	border-radius: 3px;
	transition: all .3s ease-in-out;
}

/* footer + content */
footer{
    display: flex;
    position: relative;
    width: 100%;
    height: 50px;
    justify-content: space-around;
    align-items: center;
    min-height: 8vh;
    background-color: #000000;
    color: #ffffff;
}

/* Social Media Icons Reference W3SCHOOLS https://www.w3schools.com/howto/howto_css_social_media_buttons.asp */
.fa {
    padding: 15px;
    font-size: 30px;
    width: 50px;
    text-align: center;
    text-decoration: none;
    margin: 5px, 2px;
}

.fa-facebook {
    background: #000000;
    color: rgb(255, 255, 255);
}

.fa-twitter {
    background: #000000;
    color: rgb(255, 255, 255);
}

.fa-instagram {
    background: #000000;
    color: rgb(255, 255, 255);
}

.fa-youtube{
    background: #000000;
    color: rgb(255, 255, 255);
}

.fa:hover {
    opacity: 0.7;
}

/* video section */

.iframe-container{
    position: relative;
    width: 100%;
    padding-bottom: 56.25%; 
    height: 0;
}

.iframe-container iframe{
    position: absolute;
    top:0;
    left: 0;
    width: 100%;
    height: 100%;
}

.videoSection{
    display: flex;
    flex-direction: column;
    align-items: center;

}
  
.thecard{
    display: flex;
    align-items: center;
    justify-content: center;
    transform-style: preserve-3d;
    transition: all 0.5s ease;   
}

.thefront{
    display: flex;
    overflow: hidden;
    transform: rotateY(0);
    backface-visibility: hidden;
    justify-content: space-around;
}

.theback{
    padding-top:10%;
    width: 100%;
    height: auto;
    text-align: center;
    flex-direction: column;
    backface-visibility: hidden;
    position: absolute;
    transform: rotateY(180deg);
    background-color: #1A1A1A;
    color: #ffffff;
}

.backcontent{

    
}

.thecard:hover > .thefront{
    content: none;
    transform: rotateY(-180deg);
}

.thecard:hover > .theBack{
    content: none;
    transform: rotateY(0deg);
}

/* when hovering should turn gold */
a:hover{
    color: #e5c163;
}

/* Add an active class to highlight the current page */
a.active {
    background-color: rgb(218, 185, 102);
    color: black;
    border-radius: 6px;
}

